CKA-CKS-CKAD/netpol/netpol-ckad0023.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: ckad0023
spec:
  podSelector:
    matchLabels:
      id: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          id: api
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
