CKA-CKS-CKAD/netpol/netpol-default-net-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: net-policy
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
