CKA-CKS-CKAD/netpol/netpol-modern-ckad0021.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ckad0021-newpod
  namespace: ckad0021
spec:
  podSelector:
    matchLabels:
      allow-access: "true"
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: storage
    - podSelector:
        matchLabels:
          app: web
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: storage
    - podSelector:
        matchLabels:
          app: web
    ports:
    - protocol: TCP
      port: 80
